--- a/touhou.html
+++ b/touhou.html
@@ -14,7 +14,7 @@
          Xin chào, <br>
          Web này về Touhou Project do fan làm
          <p>
-            <a href="https://en.touhouwiki.net/wiki/Embodiment_of_Scarlet_Devil">  <h3>Touhou 6 : Embodiment of Scarlet Devil</h3></a>
+            <a href="https://en.touhouwiki.net/wiki/Embodiment_of_Scarlet_Devli">  <h3>Touhou 6 : Embodiment of Scarlet Devli</h3></a>
          </p>
          <img src = "https://upload.wikimedia.org/wikipedia/en/8/8b/Th06cover.jpg" alt ="Bìa của đĩa Touhou 6"/> 
          <ul>
@@ -29,7 +29,7 @@
          <p>
           <h2> Tổng quan :</h2>
           <p>
-          Touhou Koumakyou ~ the Embodiment of Scarlet Devil (東方紅魔郷　～　the Embodiment of Scarlet Devil, "Đông Phương Hồng Ma Hương") là tựa game thứ 6 của sê-ri Touhou Project và là tựa game đầu tiên được làm trên nền Windows. Số hiệu của tựa game này là 6. Nó thường được gọi là "Embodiment of Scarlet Devil", Touhou 6 hoặc ngắn nhất là bằng tên viết tắt EoSD.
+          Touhou Koumakyou ~ the Embodiment of Scarlet Devli (東方紅魔郷　～　the Embodiment of Scarlet Devli, "Đông Phương Hồng Ma Hương") là tựa game thứ 6 của sê-ri Touhou Project và là tựa game đầu tiên được làm trên nền Windows. Số hiệu của tựa game này là 6. Nó thường được gọi là "Embodiment of Scarlet Devli", Touhou 6 hoặc ngắn nhất là bằng tên viết tắt EoSD.
           </p>
          </p>
          <!---->
@@ -54,13 +54,13 @@
               <!--Năng lực Reimu-->
               <h3>Năng lực :</h3>
               <ul>
-              <il><h4>Năng lực "nổi" : <br> </h4></il>
+              <li><h4>Năng lực "nổi" : <br> </h4></li>
               <p>Năng lực "nổi" là năng lực mạnh nhất mà Reimu sở hữu, nó cho cô nhiều khả năng phi thường mà ngay cả những pháp sư cũng khó giải thích. Nó được thể hiện rõ ràng nhất thông qua spell card Mộng Tưởng Thiên Sinh khiến Reimu trở nên bất diệt trong chiến đấu.</p>
-              <il><h4>Điều khiển linh khí</h4></il>
-              <p>Khả năng này được đề cập trong the Embodiment of Scarlet Devil. Nó giúp Reimu kiểm soát trạng thái linh hồn của các sinh vật sống. Khả năng này về sau không còn được nhắc đến.</p>
-              <il><h4>Sức mạnh của vu nữ Bác Lệ thần xã :</h4></il>
+              <li><h4>Điều khiển linh khí</h4></li>
+              <p>Khả năng này được đề cập trong the Embodiment of Scarlet Devli. Nó giúp Reimu kiểm soát trạng thái linh hồn của các sinh vật sống. Khả năng này về sau không còn được nhắc đến.</p>
+              <li><h4>Sức mạnh của vu nữ Bác Lệ thần xã :</h4></li>
               <p>Reimu có khả năng sử dụng thành thạo các phép thuật trừ tà và thực hiện được các nghi lễ ban phước mà phần lớn các nghi lễ này chỉ mang tính hình thức. Reimu cũng có khả năng triệu hồi sức mạnh của thần vào cơ thể, tuy nhiên vì cô không thờ cúng các vị thần mà cô biết nên cô sử dụng khả năng này để triệu hồi sức mạnh của yêu quái. Ngoài ra cô cũng là nhân vật đầu tiên biết sử dụng võ thuật (có thể là võ gia truyền) trong Touhou. Khả năng này đã được nhắc đến trong phiên bản đầu tiên.</p>
-              <il><h4>Kỹ thuật về kết giới</h4></il>
+              <li><h4>Kỹ thuật về kết giới</h4></li>
               <p>Năng lực sử dụng kết giới là một trong những năng lực sở trường của Reimu, chỉ đứng sau <a href = "https://vi.touhouwiki.net/wiki/Yakumo_Yukari"> Yukari Yakumo </a> </p>
               <!--Nghề nghiệp-->
               <h3>Nghề nghiệp :</h3> 
@@ -92,44 +92,44 @@
             </p>
             <!--Ngoại hình Marisa-->  
             <h3>Ngoại hình : </h3>  
-            <p>Nhìn chung, Marisa luôn được khắc hoạ với đôi mắt vàng và mái tóc vàng. Trang phục của cô mang tông màu đen và trắng, gồm áo và vái đen với tạp dề và may ô trắng, cùng với một chiếc mũ phù thuỷ màu đen cột nơ trắng. Tóc cô thường được bện sang một bên với một chiếc nơ buộc ở phần dưới. Đôi khi cô mặc trang phục màu xang lam sẫm. Ngoại hình của cô có phần khác biệt giữ các game và ấn phẩm như màu chiếc nơ trên mũ, độ dài và kiểu tóc, hoặc các kiểu tạp dề khác nhau. Trong Embodiment of Scarlet Devil, cô mang chiếc tạp dề trắng với áo may ô đen. </p>
+            <p>Nhìn chung, Marisa luôn được khắc hoạ với đôi mắt vàng và mái tóc vàng. Trang phục của cô mang tông màu đen và trắng, gồm áo và vái đen với tạp dề và may ô trắng, cùng với một chiếc mũ phù thuỷ màu đen cột nơ trắng. Tóc cô thường được bện sang một bên với một chiếc nơ buộc ở phần dưới. Đôi khi cô mặc trang phục màu xang lam sẫm. Ngoại hình của cô có phần khác biệt giữ các game và ấn phẩm như màu chiếc nơ trên mũ, độ dài và kiểu tóc, hoặc các kiểu tạp dề khác nhau. Trong Embodiment of Scarlet Devli, cô mang chiếc tạp dề trắng với áo may ô đen. </p>
               <h3>Năng lực :</h3>
               <ul>
-                <il><h4>Sức mạnh :</h4></il>
+                <li><h4>Sức mạnh :</h4></li>
                 <p>Marisa chỉ là một người bình thường không có khả năng thiên bẩm, nhưng sức mạnh thật sự của cô ấy đến từ khả năng dùng được một trong những ma pháp cấp cao nhất mà loài người có thể dùng – một kì công bất thường mà có lẽ chỉ lập được nhờ vào những ảnh hưởng của <a href = "https://en.touhouwiki.net/wiki/Forest_of_Magic" > Rừng Ma Thuật</a>. Cô đã từng đối mặt với rất nhiều con người và yêu quái mạnh, và cũng giải quyết được vấn đề trong các tình huống khác nhau, tất cả đều đạt được thành công mĩ mãn. </p>
                 <p>Cô có gắn bó mật thiết với sức mạnh và có niềm tin riêng về việc phô diễn sức mạnh. Cô luôn tìm kiếm đối thủ để chiến đấu và chơi đùa bằng cách tìm lỗi. Dù vậy, cô thật ra là một người rất chăm chỉ, và tài năng của cô đều bắt nguồn từ việc tập luyện bí mật. Mặc dù vóc người nhỏ bé, Marisa khá khoẻ mạnh.</p>
-                <il><h4>Sử dụng ma thuật</h4></il>
+                <li><h4>Sử dụng ma thuật</h4></li>
                 <p>Marisa tập luyện những ma pháp thiên về ánh sáng và nhiệt. Cô là một pháp sư phương Đông tiếp cận với ma thuật theo kiểu phương Tây. Dù cô không biết sử dụng gì ngoài ma pháp huỷ diệt, nhưng chỉ sức tàn phá không thôi đã là rất khủng khiếp. Nó có rất ít nhược điểm, hiệu quả với cả loài người và yêu quái. Khi cô dùng spell card, cô phô diễn một màn trình diễn ma pháp ảo diệu trong lúc thanh trừng yêu quái không thương tiếc.</p>
                 <p>Ma pháp của cô ấy kiến tạo một màn danmaku rất đẹp, nhưng điều này chỉ thực hiện được là nhờ nỗ lực kiên trì xây dựng hiệu ứng lớp chồng lớp. Đa số ma pháp của cô dựa vào sức mạnh hơn là sự tinh tế và thiết kế theo chủ đề các vì sao cùng những hiện tượng thiên văn.</p>
-                <il><h4>Bay lượn</h4></il>
+                <li><h4>Bay lượn</h4></li>
                 <p>Marisa hầu như luôn được khắc hoạ là cưỡi trên cây chổi khi bay lượn, đến mức không một hoạt cảnh nào cho thấy cô rời tay khỏi cây chổi của chính mình.</p>
-                <il><h4>Tốc độ</h4></il>
+                <li><h4>Tốc độ</h4></li>
                 <p>Marisa có vẻ rất tự hào với tốc độ của mình và có thể cô là một trong những nhân vật có tốc độ nhanh nhất Ảo Tưởng Hương (Gensokyo). Tuy vậy, mặc dù bản thân Marisa rất nhanh, song vẫn có thể tồn tại những nhân vật khác nhanh hơn cô. Sự nhanh nhẹn của Marisa cũng được khắc họa trong game. Trong các phần game bullet hell, cô thường là nhân vật nhanh nhất trong dàn nhân vật chính trừ một số trường hợp hi hữu.</p>
-                <il><h4>Học các tuyệt chiêu của nhân vật khác</h4></il>
-                <p>Thẻ spellcard "Love Sign - Non Directional Laser" của Marisa được phỏng theo đòn tấn công bình thường của <a id = "Patchouli" href = "https://vi.touhouwiki.net/wiki/Patchouli_Knowledge">Patchouli Knowledge</a> (Main Boss màn 4) trong Embodiment of Scarlet Devil. Marisa còn phỏng theo nhiều tuyệt chiêu của nhân vật khác ở các phần game sau.</p>
+                <li><h4>Học các tuyệt chiêu của nhân vật khác</h4></li>
+                <p>Thẻ spellcard "Love Sign - Non Directional Laser" của Marisa được phỏng theo đòn tấn công bình thường của <a id = "Patchouli" href = "https://vi.touhouwiki.net/wiki/Patchouli_Knowledge">Patchouli Knowledge</a> (Main Boss màn 4) trong Embodiment of Scarlet Devli. Marisa còn phỏng theo nhiều tuyệt chiêu của nhân vật khác ở các phần game sau.</p>
               </ul>
               <h3>Nghề Nghiệp :</h3>
               <ul>
-                <il><h4>Thí nghiệm với nấm ma thuật</h4></il>
+                <li><h4>Thí nghiệm với nấm ma thuật</h4></li>
                 <p>Marisa thu hái rất nhiều loại nấm kỳ lạ khác nhau trong Rừng Ma Thuật. Cô đun sôi, nghiền nát, phơi khô, và hơn nữa là trộn chúng, làm ra những hoá chất hoặc dược liệu lạ. Bằng cách đun nóng, ngâm chúng vào nước, hoặc cứ quẳng chúng trực tiếp vào, qua thực nghiệm, cô tìm ra các kiểu mẫu có thể trở thành nguyên liệu pháp thuật. Dù thành công hay thất bại, cô nàng đều ghi chú chi tiết từng thí nghiệm. Trong nhà cô có vô vàn những tài liệu pháp thuật này.</p>
-                <il><h4>Chủ tiệm cửa hàng ma thuật Kirisame</h4></il>
+                <li><h4>Chủ tiệm cửa hàng ma thuật Kirisame</h4></li>
                 <p>Marisa quản lý một cửa tiệm kinh doanh đa dịch vụ ngay sát nhà cô ấy. Mặc dù đây là nghề nghiệp chính, nhưng cô hiếm khi có ở tiệm. Bên trong tiệm hỗn loạn không thể tưởng tượng được khiến cho tiệm không khác gì là một Rừng Ma Thuật thu nhỏ.</p>
-                <il><h4>Đạo chích</h4></il>
+                <li><h4>Đạo chích</h4></li>
                 <p>Marisa thường xuyên xông vào thư viện của Patchouli Knowledge và hô to châm ngôn "cho ta mượn cái này ze" trong lúc vác đồ chạy đi. Khả năng "Học tuyệt chiêu của các nhân vật khác" có thể bắt nguồn từ bản chất "cầm nhầm đồ" này.</p>
               </ul>
               <h3>Sở hữu :</h3>
               <ul>
-                <il><h4>Chổi thần</h4></il>
+                <li><h4>Chổi thần</h4></li>
                 <p>Chổi thần là một cây chổi tre mà Marisa dùng để bay. Nó là cây chổi bình thường, nhưng do phơi nhiễm pháp thuật liên tục đã tạo ra một sự thay đổi khá lý thú. Dù cán chổi bằng tre đã chết, lá tre có vẻ đâm chồi, không chịu bất cứ ảnh hưởng nào từ ma pháp của Marisa.</p>
-                <il><h4>Lò Bát Quái cầm tay</h4></il>
+                <li><h4>Lò Bát Quái cầm tay</h4></li>
                 <p>Lò Bát Quái cầm tay, vật dụng quý giá của Marisa, là một cái lò cô dùng để khai hoả tuyệt chiêu đặc trưng Master Spark. Từ ngọn lửa của bếp lò, lửa của súng phun lửa, cho đến một ma pháo tầm rộng mạnh mẽ và vô địch, Lò Bát Quát cầm tay có rất nhiều công dụng tiện lợi. Chính Marisa đã nói, "Tôi còn chẳng thể nghĩ tới việc sống mà thiếu nó."Morichika Rinnosuke đã tặng cho Marisa chiếc lò bát quái như là món quà chia tay khi Marisa rời gia đình để đến sống tại Rừng Ma Thuật, mặc dù điều này khá là liều lĩnh đối với một cô gái ở tuổi cô ấy.</p>
-                <il><h4>Đũa phép</h4></il>
+                <li><h4>Đũa phép</h4></li>
                 <p>Ở phần Touhou 6, Marisa hiện không dùng đũa phép cho tới các phần sau</p>
-                <il><h4>Thuốc Nấm</h4></il>
+                <li><h4>Thuốc Nấm</h4></li>
                 <p>Marisa mang lọ thuốc làm từ nấm pháp thuật dưới váy. Khi ném món này, lọ thuốc sẽ phát nổ như lựu đạn.</p>
-                <il><h4>Thảo Thế Kiếm</h4></il>
+                <li><h4>Thảo Thế Kiếm</h4></li>
                 <p>Trong quá trình tìm kiếm và thu thập Phi Phi Sắc Kim, Marisa đã lấy được Thảo Thế Kiếm nhưng cô lại tưởng rằng đó chỉ là một thanh gươm rỉ sét. Không biết giá trị thật sự của thanh kiếm này, cô đã trao đổi chúng cùng với mớ kim loại phế liệu cho Rinnosuke để anh sửa lò bát quái cầm tay cho cô.</p>
-                <il><h4>Khối cầu Thần bí Nguyệt Đô (Lunar capital)</h4></il>
+                <li><h4>Khối cầu Thần bí Nguyệt Đô (Lunar capital)</h4></li>
                 <p>Có ở phần <a href = "https://vi.touhouwiki.net/wiki/Legacy_of_Lunatic_Kingdom"> Touhou 15 : Legacy of Lunatic Kingdom</a></p>
               </ul>
 
@@ -144,7 +144,7 @@
             Nhân vật không được sử dụng: 
           </h2>
           <ul>
-            <il> <b>Satsuki Rin</b></il>
+            <li> <b>Satsuki Rin</b></li>
             <p>
               Không có tiểu sử
              </p>
@@ -154,7 +154,7 @@
               Các stage boss:
             </h2>
             <ol>
-              <il><b>Rumia / Yêu quái của hoàng hôn (Mid / Main Boss)</b></il> <br>
+              <li><b>Rumia / Yêu quái của hoàng hôn (Mid / Main Boss)</b></li> <br>
               <img src = "https://en.touhouwiki.net/images/f/fe/Th06Rumia.png" />
               <h3>Tiểu sử :</h3>
               <p> Rumia (ルーミア) là một cô yêu quái không rõ chủng loài. <a id = "Rumia" href = "https://vi.touhouwiki.net/wiki/Rumia">Rumia</a> có năng lực điều khiển bóng tối, cho phép cô tạo ra một không gian tối đen như mực xung quanh mình, thường được vẽ như một khối cầu màu đen. Đây là loại bóng tối ma thuật khiến ngay cả những ngọn đuốc cũng không thể thắp sáng nó, bất kỳ ai lạc vào trong bóng tối này không còn một chút tầm nhìn nào nữa. Trong phần 6, Rumia chạm mặt nhân vật chính trong khi đang bay vô định trên bầu trời, cô đã tấn công họ vì họ là con người, nhưng họ quá mạnh và cô nhanh chóng bị đánh bại. Cô cũng là Boss mà người chơi chạm trán đầu tiên</p>
@@ -162,21 +162,21 @@
               <p>Cô có mắt đỏ, tóc ngắn màu vàng hoe. Áo ngoài và váy của cô đều màu đen, nhưng bên trong cô mặc áo dài tay màu trắng. Trên cổ cô có một vật trang trí hình hai viên tròn màu đỏ. Trên đầu cô có một chiếc ruy băng màu đỏ buộc bên trái, chiếc ruy băng đỏ trên tóc của cô là một loại bùa mà cô không tài nào chạm vào được. Cô mang giày đỏ, tất trắng. Cô có chiều cao của một cô bé loài người tầm tuổi thiếu niên.</p>
               <h3>Năng Lực :</h3>
               <ul>
-                <il><h4>Điều khiển bóng tối</h4></il>
+                <li><h4>Điều khiển bóng tối</h4></li>
                 <p>Rumia có năng lực điều khiển bóng tối, cho phép cô tạo ra một không gian tối đen như mực xung quanh mình, thường được vẽ như một khối cầu màu đen. Đây là loại bóng tối ma thuật khiến ngay cả những ngọn đuốc cũng không thể thắp sáng nó, bất kỳ ai lạc vào trong bóng tối này không còn một chút tầm nhìn nào nữa.Bên trong bóng tối này khiến người ta không còn có bất kỳ cảm giác nào về phương hướng, vì khắp mọi nơi đều chỉ là một màu đen. Thứ bóng tối này cũng che mắt chính Rumia bên trong nó, khiến cô di chuyển một cách vô định mà không có đích đến. Nó cũng khiến cô không thấy được những chướng ngại vật trước mắt, và bản thân cô cũng thừa nhận rằng mình từng nhiều lần đâm sầm vào cây.Rumia có thể tự do điều chỉnh cường độ ánh sáng lọt vào trong bóng tối của mình. Vì ánh sáng không chiếu vào được bên trong bóng tối này, nó luôn rất mát mẻ ngay cả khi bên ngoài đang là trời mùa hè nắng gắt.</p>
-                <il><h4>Spell card :</h4></il>
+                <li><h4>Spell card :</h4></li>
                 <p>Rumia không có nhiều spell card, tên hiệu của chúng thường liên quan đến bóng tối. Loại danmaku xuất hiện chủ yếu trong các spell card của cô là các danmaku tròn nhỏ. Trong spell card Darkness Sign "Dark Side of the Moon" ta thấy cô biến thành một làn khói trắng trong khi thi triển.</p>
               </ul>
 
-              <il><b>Daiyousei / Đại Tiên Nữ (Mid Boss)</b></il> <br>
+              <li><b>Daiyousei / Đại Tiên Nữ (Mid Boss)</b></li> <br>
 
-              <il><b>Cirno (Main Boss)</b></il> <br>
-              <il><b>Hong Meiling (Main Boss)</b></il> <br> 
-              <il><b>Koakuma (Mid Boss)</b></il> <br>
-              <il><b>Patchouli Knowledge (Main Boss)</b></il> <br>
-              <il><b>Sakuya Izayoi (Mid / Main Boss)</b></il> <br>
-              <il><b>Remilia Scarlet (Main Boss)</b></il> <br>
-              <il><b>Flandre Scarlet (Extra Boss)</b></il>
+              <li><b>Cirno (Main Boss)</b></li> <br>
+              <li><b>Hong Meliing (Main Boss)</b></li> <br> 
+              <li><b>Koakuma (Mid Boss)</b></li> <br>
+              <li><b>Patchouli Knowledge (Main Boss)</b></li> <br>
+              <li><b>Sakuya Izayoi (Mid / Main Boss)</b></li> <br>
+              <li><b>Remliia Scarlet (Main Boss)</b></li> <br>
+              <li><b>Flandre Scarlet (Extra Boss)</b></li>
             </ol>
         </div>
     </body>
